# cairo

./: Cargo.toml  server.sh
crates/cairo-lang-compiler/src/: db.rs
crates/cairo-lang-language-server/: Cargo.toml
crates/cairo-lang-language-server/src/: lib.rs
crates/cairo-lang-language-server/src/sys/: mod.rs
crates/cairo-lang-parser/: Cargo.toml
crates/cairo-lang-parser/src/: db.rs
crates/cairo-lang-semantic/: Cargo.toml
crates/cairo-lang-semantic/src/: db.rs
crates/cairo-sys/: Cargo.toml
crates/cairo-sys/src/: lib.rs
docs/: memory_leak.md
