[package]
name = "cairo-sys"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "General utilities for the Cairo compiler project."

[dependencies]
procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "7693954bd1dd86eb1709572fd7b62fd5f7ff2ea1"}
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
